--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,3 +141,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
