--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^3.7.4",
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
